--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #E9E3E7;
+    color: #0E1C1C;
   }
   
   a {
